# notion_mcp

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-main.yml  publish.yml
src/mcp_server_notion/: __main__.py  server.py
