[project]
name = "mcp-server-notion"
version = "0.2.1"
description = "A Model Context Protocol Tool for Notion integration and automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "shpark" }]
maintainers = [{ name = "shpark", email = "shp8019@gmail.com" }]
keywords = ["notion", "mcp", "llm", "automation", "tool"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "notion-client>=2.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
mcp-server-notion = "mcp_server_notion.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"